<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sunshine</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- 实景上传 -->
    <string name="text_select_image_failed">选择图片失败</string>
    <string name="text_upload_failed">实景上传失败</string>
    <string name="text_upload_pic_load_failed">图片加载失败，请返回重新选择并上传</string>
    <string name="text_upload_success">实景上传成功</string>
    <!-- 描述 -->
    <string name="description_main_title_city">城市列表</string>
    <string name="description_main_title_share">分享</string>
    <string name="description_main_title_camera">实景图拍照</string>
    <string name="description_city_list_back">返回</string>
    <string name="description_city_list_add">添加</string>
    <string name="description_city_list_edit">编辑</string>
    <string name="description_city_list_ok">完成</string>
    <string name="descriprion_upload_upload">发布</string>
    
    <!-- tab标签 -->
    <string name="tab_weather">天气</string>
    <string name="tab_shijing">实景</string>
    <string name="tab_mine">我的</string>

    <!-- weather -->
    <string name="location_start">正在定位...</string>
    <string name="location_failed">定位失败，请手动选择城市</string>
    <string name="location_success">定位成功</string>
    <string name="text_today">今天</string>
    <string name="text_index">指数</string>
    <string name="text_shared_to">分享到</string>
    <string name="tv_alarm_notification">知道了</string>
    
    <!-- city -->
    <string name="city_location">定位</string>
    <string name="hint_add_city_search_city">搜索中国城市</string>
    <string name="city_cant_add_repeat_city">抱歉，不能重复添加城市</string>
    <string name="no_saved_city">没有选择城市</string>
    
    <!-- shijing -->
    <string name="tv_shijing">实景照片</string>
    <string name="tv_shijing_camera">拍照</string>
    <string name="tv_shijing_select_from_gallery">从图库中选择</string>
    <string name="tv_shijing_no_pic">该城市暂时没有实景照片，赶紧上传实景试试吧~</string>
    
    <!-- mine -->
    <string name="btn_mine_settings">设置</string>
    <string name="tv_mine_face_login">登录</string>
    <string name="tv_mine_face_background">背景预览</string>
    <string name="tv_mine_face_clean">清除缓存</string>
    <string name="tv_mine_face_version">版本信息</string>
    <string name="tv_mine_face_me">关于我们</string>
    
    <!-- upload -->
    <string name="tv_upload_name">发布实景</string>
    <string name="tv_upload_upload">发布</string>
    <string name="tv_uploading">正在上传...</string>
    <string name="hint_descrption">添加实景描述</string>
    
    <!-- settings -->
    <string name="text_settings_setting">设置</string>
    <string name="text_settings_rate_weather">天气更新频率</string>
    <string name="text_settings_rate_weather_description">每%1$s小时更新</string>
    <string name="text_settings_rate_dialog_title">请选择更新频率</string>
    <string name="text_settings_rate_default">3</string>
    <string name="text_select_weather_title">天气详情</string>
     
    <!-- weather show -->
    <string name="text_weather_sun_day">晴(白天)</string>
    <string name="text_weather_sun_night">晴(夜间)</string>
    <string name="text_weather_blur_day">多云(白天)</string>
    <string name="text_weather_blur_night">多云(夜间)</string>
    <string name="text_weather_smallrain_day">小雨(白天)</string>
    <string name="text_weather_smallrain_night">小雨(夜间)</string>
    <string name="text_weather_bigrain_day">暴雨(白天)</string>
    <string name="text_weather_bigrain_night">暴雨(夜间)</string>
    <string name="text_weather_snow_day">雪(白天)</string>
    <string name="text_weather_snow_night">雪(夜间)</string>
    <string name="text_weather_fog_day">雾霾(白天)</string>
    <string name="text_weather_fog_night">雾霾(夜间)</string>
    
    <!-- login -->
    <string name="tv_user_login">帐户登录</string>
    <string name="tv_user_register">用户注册</string>
    <string name="tv_user_name">用户名</string>
    <string name="tv_user_password">密    码</string>
    <string name="tv_user_password_again">确认密码</string>
    <string name="tv_user_rember_password">记住密码</string>
    <string name="btn_user_register">注册</string>
    <string name="tv_user_look">显示密码</string>
    
    <!-- login or register prompt -->
    <string name="prompt_password_again">请重新确认密码</string>
    <string name="text_dialog_registering">注册中,请稍等...</string>
    <string name="text_register_success">注册成功</string>
    <string name="text_register_failed">注册失败，请重试</string>
    <string name="text_register_server_failed">服务器连接失败！</string>
    <string name="text_dialog_logining">登录中,请稍等...</string>
    <string name="text_login_success">登录成功</string>
    <string name="text_login_password_error">输入的用户名或密码错误</string>
    <string name="text_login_server_failed">服务器连接失败</string>
   
</resources>
