<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"  >
    
    <RelativeLayout
        android:id="@+id/rl_upload_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_main_title"
        android:background="@color/black"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/padding_title_horizontal"
        android:paddingRight="@dimen/padding_title_horizontal" >

        <ImageButton
            android:id="@+id/ib_upload_title_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@null"
            android:contentDescription="@string/description_main_title_city"
            android:src="@drawable/selector_city_btn"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_upload_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_title"
            android:text="@string/tv_upload_name" />

        <ImageButton
            android:id="@+id/ib_upload_title_upload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:contentDescription="@string/descriprion_upload_upload"
            android:src="@drawable/selector_photo_upload" />
        
    </RelativeLayout>
    
    <EditText 
        android:id="@+id/et_pic_description"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_textview"
        android:layout_below="@id/rl_upload_title"
        android:layout_margin="@dimen/margin_small"
        android:paddingLeft="@dimen/padding_small"
        android:paddingRight="@dimen/padding_small"
        android:hint="@string/hint_descrption"
        android:background="@null"
        android:minLines="4"
        android:maxLines="4"
        android:gravity="top"
        />
    
    <ImageView 
        android:id="@+id/iv_upload_pic"
        android:layout_width="@dimen/size_shijing_pic"
        android:layout_height="@dimen/size_shijing_pic"
        android:layout_below="@id/et_pic_description"
        android:layout_margin="@dimen/margin_small"
        />
	
</RelativeLayout>
