<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clipToPadding="true"
    android:fitsSystemWindows="true" >

    <RelativeLayout
        android:id="@+id/li_login_page"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_main_title"
        android:layout_alignParentTop="true"
        android:background="@color/black" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:text="@string/tv_user_login"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_user_register"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:background="@color/gray"
            android:gravity="center"
            android:text="@string/btn_user_register"
            android:textColor="@color/white"
            android:textSize="15sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_login_area"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:id="@+id/login_edit_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="13dp"
            android:layout_marginRight="13dp"
            android:layout_marginTop="100dp"
            android:background="@drawable/corner_login_background"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:gravity="left"
                    android:text="@string/tv_user_name"
                    android:textColor="@android:color/black"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/et_user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:gravity="center"
                    android:hint="@string/tv_user_name"
                    android:singleLine="true" />

                <Button
                    android:id="@+id/bt_login_name_clean"
                    android:layout_width="30dp"
                    android:layout_height="30dp" />
            </LinearLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="@color/white_dd" />

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:gravity="left"
                    android:text="@string/tv_user_password"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/et_user_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:gravity="center"
                    android:hint="@string/tv_user_password"
                    android:inputType="textPassword"
                    android:singleLine="true" />

                <Button
                    android:id="@+id/bt_login_password_clean"
                    android:layout_width="30dp"
                    android:layout_height="30dp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/li_choose"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_below="@+id/login_edit_layout"
            android:gravity="center_vertical"
            android:layout_centerInParent="true"
            android:orientation="horizontal" >

            <CheckBox
                android:id="@+id/cb_rember_password"
                android:layout_width="50dp"
                android:layout_height="50dp" />

            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/tv_user_rember_password" />

            <CheckBox
                android:id="@+id/cb_look_password"
                android:layout_width="50dp"
                android:layout_height="50dp" 
                android:layout_marginLeft="30dp"/>

            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/tv_user_look" />
        </LinearLayout>

        <Button
            android:id="@+id/bt_user_login"
            android:layout_width="200dp"
            android:layout_height="42dp"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="13dp"
            android:layout_marginRight="13dp"
            android:layout_marginTop="13dp"
            android:layout_below="@+id/li_choose"
            android:text="@string/tv_mine_face_login"
            android:textSize="15sp" />
    </RelativeLayout>

</RelativeLayout>