<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/trans"
    tools:context="com.lzpnsd.sunshine.MainActivity" >

    
    <ViewFlipper
        android:id="@+id/vf_main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
         >
    </ViewFlipper>
    
    <RadioGroup
        android:id="@+id/rg_main_bottom_selector"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_main_title"
        android:layout_alignParentBottom="true"
        android:background="@color/black_trans"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/rb_main_bottom_weather"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:checked="true"
            android:drawablePadding="-3dp"
            android:drawableTop="@drawable/selector_rb_weather"
            android:gravity="center"
            android:text="@string/tab_weather"
            android:textColor="@drawable/selector_rb_text"
            android:textSize="11sp" />

        <RadioButton
            android:id="@+id/rb_main_bottom_shijing"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:drawablePadding="-3dp"
            android:drawableTop="@drawable/selector_rb_shijing"
            android:gravity="center"
            android:text="@string/tab_shijing"
            android:textColor="@drawable/selector_rb_text"
            android:textSize="11sp" />

        <RadioButton
            android:id="@+id/rb_main_bottom_mine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:drawablePadding="-3dp"
            android:drawableTop="@drawable/selector_rb_mine"
            android:gravity="center"
            android:text="@string/tab_mine"
            android:textColor="@drawable/selector_rb_text"
            android:textSize="11sp" />
    </RadioGroup>

</RelativeLayout>