<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:clipToPadding="true"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:id="@+id/rl_register_page"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_main_title"
        android:layout_alignParentTop="true"
        android:background="@color/black" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:text="@string/tv_user_register"
            android:textColor="@color/white"
            android:textSize="15sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_login_area"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/rl_register_page"
        android:background="@color/white" >

        <LinearLayout
            android:id="@+id/login_edit_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="13dp"
            android:layout_marginRight="13dp"
            android:layout_marginTop="100dp"
            android:background="@drawable/corner_login_background"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:gravity="left"
                    android:text="@string/tv_user_name"
                    android:textColor="@android:color/black"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/et_user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/tv_user_name"
                    android:singleLine="true" />

            </LinearLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="@color/white_dd" />

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:gravity="left"
                    android:text="@string/tv_user_password"
                    android:textColor="@color/black"
                    
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/et_user_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/tv_user_password"
                    android:inputType="textPassword"
                    android:singleLine="true" />

            </LinearLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="@color/white_dd" />

           
        </LinearLayout>

        <Button
            android:id="@+id/bt_user_register"
            android:layout_width="200dp"
            android:layout_height="42dp"
            android:layout_below="@+id/login_edit_layout"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="13dp"
            android:layout_marginRight="13dp"
            android:layout_marginTop="13dp"
            android:text="@string/btn_user_register"
            android:textSize="15sp" />
    </RelativeLayout>

</RelativeLayout>